exo: Update cursor on wl_pointer::set_cursor

The cursor scale and rotation must be updated on pointer enter, even
though neither the surface nor the hotspot changed.

BUG=730843
TEST=caroline: Cursor is not stale on pointer enter.

Review-Url: https://codereview.chromium.org/2935753002
Cr-Commit-Position: refs/heads/master@{#478660}

Former-commit-id: 1a58cb060e6c628db1e36f824bd2c6ed1ec1ae14